# pivimage

./: .gitignore  CHANGELOG.md  LICENSE  README.md  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: tests.yml
dev/: README.md  background_removal.ipynb
examples/: Getting started.ipynb
pivimage/: __init__.py  _version.py  background_removal.ipynb  file_wrapper.py  meta.py  pivimage.py
tests/: test_meta.py  test_pivimage.py  test_pivimagepair.py  test_pivimages.py  test_version.py
