[metadata]
name = pivimage
version = 0.2.0
author = Matthias Probst
author_email = matthias.probst@kit.edu
description = Small library reading images and providing PIV-specific utilities.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matthiasprobst/pivimage
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
packages = find:
python_requires = >=3.8, <3.11
include_package_data = True
install_requires =
    appdirs>=1.4.4
    numpy
    tqdm>=4.64.0
    pco_tools>=1.0.0
    python-dotenv
    scikit-image
    pyyaml>=6.0
    netCDF4<=1.6.0
    opencv-python>=4.5.3.56
    importlib-metadata>=5.0.0

[tool:pytest]
python_files = test_*.py
testpaths = tests
